--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: "Robert Mounce Portfolio"
 description: "A showcase of my data analytics projects and skills"
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
