--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: "Robert Mounce Portfolio"
 description: "A showcase of my data analytics projects and skills"
+logo: /IMG_0070.jpeg
 theme: jekyll-theme-minimal
